src/objects/POITypeResult__c.object
<CustomObject>
    <fields>
        <fullName>AuditResult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditResult</label>
        <referenceTo>AuditResult__c</referenceTo>
        <relationshipLabel>POITypeResults</relationshipLabel>
        <relationshipName>POITypeResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POIType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POIType</label>
        <referenceTo>POIType__c</referenceTo>
        <relationshipLabel>POITypeResults</relationshipLabel>
        <relationshipName>POITypeResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POITypeResult</label>
    <nameField>
        <label>POITypeResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POITypeResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>